tests/baselines/reference/asyncFunctionDeclaration7_es5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
asyncFunctionDeclaration7_es5.ts(3,26): error TS2524: 'await' expressions cannot be used in a parameter initializer.
asyncFunctionDeclaration7_es5.ts(3,31): error TS1109: Expression expected.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== asyncFunctionDeclaration7_es5.ts (2 errors) ====
    async function bar(): Promise<void> {
      // 'await' here is an identifier, and not a yield expression.
      async function foo(a = await): Promise<void> {
                             ~~~~~
!!! error TS2524: 'await' expressions cannot be used in a parameter initializer.
                                  ~
!!! error TS1109: Expression expected.
      }
    }